View Issue Details

IDProjectCategoryView StatusLast Update
0032748CommunityOCCT:Data Exchangepublic2023-03-19 18:27
Reporterdpasukhi Assigned Tosmoskvin 
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version7.6.0 
Target Version7.6.1Fixed in Version7.6.1 
Summary0032748: Data Exchange, Step Import - xstep.cascade.unit doesn't work [regression since OCCT 7.6.0]
DescriptionUsing STEPControl_Reader without internal DRAW commands leads to incorrect work with Interface unit parameter.
It is necessary to set Unit to StepData_StepModel during the Read process.
For example, STEPControl_Writer initializes its own unit in the STEPControl_ActorWrite::Transfer(), if it is not initialized.
Steps To ReproduceNot required
TagsNo tags attached.
Test case numberNot required

Relationships

child of 0031382 closedbugmaster Open CASCADE Data Exchange - BinXCAF should preserve length unit information 

Activities

git

2022-01-21 21:55

administrator   ~0106514

Branch CR32748 has been created by flatgern.

SHA-1: b19a6857ce96d81eb66076b431df28d88c7a05a0


Detailed log of new commits:

Author: atychini
Date: Fri Jan 21 21:55:45 2022 +0300

    0032748: Data Exchange, Step Import - xstep.cascade.unit doesn't work [regression since OCCT 7.6.0]
    Added new condition in STEPControl_ActorRead::Transfer: if StepData_StepModel is not an initialized Unit - we set unit to this step model

git

2022-01-25 12:59

administrator   ~0106571

Branch CR32748 has been updated forcibly by flatgern.

SHA-1: 8a77e426cee1518eb8b40036c85f3c9387915704

user1100

2022-01-25 17:16

  ~0106580

Last edited: 2022-01-25 17:17

Dear dpasukhi,
please review branch CR32748

All tests are OK, see:
http://jenkins-test-08.nnov.opencascade.com/view/CR32748-master-atychini/view/COMPARE/

dpasukhi

2022-01-25 17:27

developer   ~0106581

I have minor remark:
1622   XSAlgo::AlgoContainer()->PrepareForTransfer();

+  if (!aStepModel->IsInitializedUnit())
+  {
+    XSAlgo::AlgoContainer()->PrepareForTransfer(); // update unit info
+    aStepModel->SetLocalLengthUnit(UnitsMethods::GetCasCadeLengthUnit());
+  }

I think there should be only one preparation,

git

2022-01-25 17:38

administrator   ~0106582

Branch CR32748 has been updated forcibly by flatgern.

SHA-1: fefe49123d26ed03aa688bf42ec729d4b11fb4ce

kgv

2022-01-26 12:36

developer   ~0106601

@dpasukhi, do we have this problem only in STEP translator, or maybe we should check IGES / Products as well?

> STEPControl_ActorRead.cxx

dpasukhi

2022-01-27 17:30

developer   ~0106637

Iges and other DE OCCT components are protected from this problem. But there are PROD components with the same problem and they need to be fixed (DXF, Parasolid all components based on XS interface)

dpasukhi

2022-01-27 17:34

developer   ~0106638

Dear bugmaster,
please integrate. The current bug is fixed.

OCCT: CR32748
PROD: NOT

smoskvin

2022-01-29 12:20

administrator   ~0106663

Combination -
OCCT branch : IR-2022-01-28
master SHA - 7109a4ae5843002ea7a35ed2b5aafba7ccef13d4
49e51745631c52b6c452c65adae4d6dfa21a1b1e
Products branch : IR-2022-01-28 SHA - 1fcdecce4d5d9ed7b667fcd27ecafe7d444140a3
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 18541.880000000696 / 18411.29000000044 [+0.71%]
Products
Total CPU difference: 11695.81000000013 / 11647.290000000106 [+0.42%]
Windows-64-VC14:
OCCT
Total CPU difference: 20349.546875 / 20285.25 [+0.32%]
Products
Total CPU difference: 13126.203125 / 13132.546875 [-0.05%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2022-01-29 13:13

administrator   ~0106671

Branch CR32748 has been deleted by mnt.

SHA-1: fefe49123d26ed03aa688bf42ec729d4b11fb4ce

Related Changesets

occt: master ff77ee81

2022-01-21 21:55:45

atychini


Committer: smoskvin Details Diff
0032748: Data Exchange, Step Import - xstep.cascade.unit doesn't work [regression since OCCT 7.6.0]
Added new condition in STEPControl_ActorRead::Transfer: if StepData_StepModel is not an initialized Unit - we set unit to this step model
Affected Issues
0032748
mod - src/STEPControl/STEPControl_ActorRead.cxx Diff File

Issue History

Date Modified Username Field Change
2021-12-23 13:38 dpasukhi New Issue
2021-12-23 13:38 dpasukhi Assigned To => gka
2021-12-23 13:42 kgv Relationship added child of 0031382
2021-12-23 14:12 dpasukhi Description Updated
2022-01-21 21:55 git Note Added: 0106514
2022-01-25 12:59 git Note Added: 0106571
2022-01-25 17:16 user1100 Assigned To gka => dpasukhi
2022-01-25 17:16 user1100 Status new => resolved
2022-01-25 17:16 user1100 Steps to Reproduce Updated
2022-01-25 17:16 user1100 Note Added: 0106580
2022-01-25 17:17 user1100 Note Edited: 0106580
2022-01-25 17:27 dpasukhi Assigned To dpasukhi => user1100
2022-01-25 17:27 dpasukhi Status resolved => assigned
2022-01-25 17:27 dpasukhi Note Added: 0106581
2022-01-25 17:38 git Note Added: 0106582
2022-01-26 12:18 dpasukhi Assigned To user1100 => dpasukhi
2022-01-26 12:18 dpasukhi Status assigned => resolved
2022-01-26 12:36 kgv Note Added: 0106601
2022-01-27 17:30 dpasukhi Note Added: 0106637
2022-01-27 17:34 dpasukhi Assigned To dpasukhi => bugmaster
2022-01-27 17:34 dpasukhi Status resolved => reviewed
2022-01-27 17:34 dpasukhi Note Added: 0106638
2022-01-29 12:20 smoskvin Status reviewed => tested
2022-01-29 12:20 smoskvin Note Added: 0106663
2022-01-29 12:20 smoskvin Test case number => Not required
2022-01-29 13:00 smoskvin Changeset attached => occt master ff77ee81
2022-01-29 13:00 smoskvin Assigned To bugmaster => smoskvin
2022-01-29 13:00 smoskvin Status tested => verified
2022-01-29 13:00 smoskvin Resolution open => fixed
2022-01-29 13:13 git Note Added: 0106671
2023-03-19 18:27 vglukhik Status verified => closed
2023-03-19 18:27 vglukhik Fixed in Version => 7.6.1